--- a/OTONO2016/Z/Semantica1 - copia/Semantica1.tex
+++ b/OTONO2016/Z/Semantica1 - copia/Semantica1.tex
@@ -42,9 +42,9 @@
 
 \newcommand{\ascrip}[1]{#1::T}
 \newcommand{\ascripP}[2]{#1::#2}
-\newcommand{\oletD}{\mathsf{mlet} \ x = t \ \mathsf{in}  \ t}
-\newcommand{\olet}{\mathsf{mlet} \ x = t_1 \ \mathsf{in}  \ t_2}
-\newcommand{\oletP}[3]{\mathsf{mlet} \ x = #2 \ \mathsf{in}  \ #3}
+\newcommand{\oletD}{\mathsf{mlet} \ x : T = t \ \mathsf{in}  \ t}
+\newcommand{\olet}{\mathsf{mlet} \ x : T_1 = t_1 \ \mathsf{in}  \ t_2}
+\newcommand{\oletP}[3]{\mathsf{mlet} \ x : #1 = #2 \ \mathsf{in}  \ #3}
 \newcommand{\app}[2]{#1 \ #2}
 \newcommand{\appD}{t_1 \ t_2}
 \newcommand{\abs}[3]{\lambda #1:#2. \ #3}
@@ -99,47 +99,42 @@
 \begin{tabular}{l c l r}
 &&&\\
 $t$&$::=$&&$\mathsf {terms}$\\
-&&$b$&$\mathsf {boolean \ value}$\\
+&&$\truet$&$\mathsf {true \ value}$\\
+&&$\falset$&$\mathsf {false \ value}$\\
 &&$n$&$\mathsf {numeric \ value}$\\
-&&$op$&$\mathsf{operator}$\\
 &&$\absST {x}{t}$&\ $\mathsf {abstraction}$\\
 &&$x$&$\mathsf {variable}$\\
 &&$\app {t}{t}$&$\mathsf {application}$\\
 &&$\oletD$&$\mathsf {overloading \ let}$\\
 &&$\ascrip {t}$&$\mathsf {ascription}$\\
-%&&$\suma{t}$&$\mathsf {sum}$\\
-%&&$\negacion{t}$&$\mathsf {negation}$\\
+&&$\suma{t}$&$\mathsf {sum}$\\
+&&$\negacion{t}$&$\mathsf {negation}$\\
 &&&\\
-$b$&$::=$&&$\mathsf {boolean \ value}$\\
-&&$\truet$&$\mathsf {true \ value}$\\
-&&$\falset$&$\mathsf {false \ value}$\\
-&&&\\
-$op$&$::=$&&$\mathsf {operators}$\\
-&&$\suma$&$\mathsf {sum}$\\
-&&$\negacion$&$\mathsf{negation} $\\
-&&&\\
+$v$&$::=$&&$\mathsf {configuration-values}$\\
+&&$\truet$&$\mathsf{true \ value} $\\
+&&$\falset$&$\mathsf{false \ value}$\\
+&&$n$&$\mathsf{numeric \ value} $\\
+&&$\conf{\absST {x}{t}}$&$\mathsf{abstraction}$\\
 \end{tabular}
 & \begin{tabular}{l c l r}
-
-$v$&$::=$&&$\mathsf {configuration-values}$\\
-&&$b$&$\mathsf {boolean \ value}$\\
-&&$n$&$\mathsf{numeric \ value} $\\
-&&$op$&$\mathsf{operator}$\\
-&&$\conf{\absST {x}{t}}$&$\mathsf{closure}$\\
 &&&\\
 $c$&$::=$&&$\mathsf {configurations}$\\
 &&$v$&\\
 &&$t[s]$&\\
-&&$c \ c $&\\
-&&$\oletP {T}{c}{c}$&\\
 &&$\ascrip{c}$&\\
-%&&$\suma{c}$&\\
-% &&$\negacion{c}$&\\
+&&$\oletP {T}{c}{c}$&\\
+&&$c \ c $&\\
+&&$\suma{c}$&\\
+&&$\negacion{c}$&\\
 &&$\mathsf{error}$&\\
 $s$&$::=$&&$\mathsf {explicit \ substitutions}$\\
 &&$ \bullet$&$\mathsf {empty \ substitution}$\\
 &&$\subx$&$\mathsf {variable \ substitution}$\\
-
+&&&\\
+&&&\\
+&&&\\
+&&&\\
+&&&\\
 \end{tabular}\\
 \hline
 \end{tabular}
@@ -159,14 +154,11 @@ $s$&$::=$&&$\mathsf {explicit \ substitutions}$\\
 &\\
 &\framebox {$c \tto c$}\\
 &\\
-%$\truet[s] \tto \truet$&$\rulename{True}  $\\
-%&\\
-%$\falset[s] \tto \falset$&$\rulename{False}  $\\
-$b[s] \tto b$&$\rulename{False}  $\\
+$\truet[s] \tto \truet$&$\rulename{True}  $\\
+&\\
+$\falset[s] \tto \falset$&$\rulename{False}  $\\
 &\\
 $n[s] \tto n$&$\rulename{Num}  $\\
-&\\
-$op [s] \tto op$&$\rulename{Op}  $\\
 &\\
 $x[ \ ] \tto \mathsf{error}$&$\rulename{ErrVarFail}$\\
 &\\
@@ -179,10 +171,10 @@ $ \conf{\ascrip{t}} \tto \ascrip{t[s]}$&$\rulename{AscSub}$\\
 $ \conf{\olet} \tto \oletP{T_1}{t_1[s]}{t_2[s]}$&$\rulename{LetSub} $\\
 &\\
 $\conf{\appD} \tto t_1 [s] \ t_2 [s]$&$\rulename{AppSub} $\\
-%&\\
-%$\conf{\suma{t_1}} \tto \suma{t_1 [s]}$&$\rulename{SumSub} $\\
-%&\\
-%$\conf{\negacion{t}} \tto \negacion{t [s]}$&$\rulename{NegationSub} $\\
+&\\
+$\conf{\suma{t_1}} \tto \suma{t_1 [s]}$&$\rulename{SumSub} $\\
+&\\
+$\conf{\negacion{t}} \tto \negacion{t [s]}$&$\rulename{NegationSub} $\\
 &\\
 $ \ascrip{v} \tto v $&$\rulename{Asc} $\\
 &\\
@@ -190,24 +182,23 @@ ${\oletP{T_1}{v}{t_2[s]} \tto \confext{t_2}}$&$\rulename{Let} $\\
 &\\
 $\conf{\absST{x}{t_2}} \ v \tto \conf{[x \mapsto v]{t_2}}$&$\rulename{App}$\\
 &\\
-$\suma{n} \tto n + 1$&$\rulename{Sum}$\\
+$\suma{v_1} \tto v_1 + 1$&$\rulename{Sum}$\\
 &\\
-$\negacion{b} \tto \neg \ b $&$\rulename{Negation}$\\
+$\negacion{v} \tto \neg \ v $&$\rulename{Negation}$\\
 &\\
 $ \inference {c \tto c'}{\ascrip{c} \tto \ascrip{c'} }$&$\rulename{Asc1} $\\
 &\\
-$ \inference {c_1 \tto c_1'}{\oletP{T_1}{c_1}{c_2} \tto \oletP{T_1}{c_1'}{c_2} }$&$\rulename{Let1} $\\
+$ \inference {c_1 \tto c_1'}{\oletP{T_1}{c_1}{t_2[s]} \tto \oletP{T_1}{c_1'}{t_2[s]} }$&$\rulename{Let1} $\\
 &\\
 $\inference {c_1 \tto c_1'}{c_1 \ c_2 \tto c_1' \ c_2} $&$\rulename{App1}  $\\
 &\\
 $ \inference {c \tto c'}{v \ c \tto v \ c'}$&$\rulename{App2}  $\\
 &\\
-%$\inference {c \tto c'}{op \ c \tto op \ c'} $&$\rulename{OpApp1}  $\\
-%$\inference {c_1 \tto c_1'}{\suma{c_1} \tto \suma{c_1'}} $&$\rulename{Sum1}  $\\
+$\inference {c_1 \tto c_1'}{\suma{c_1} \tto \suma{c_1'}} $&$\rulename{Sum1}  $\\
 %&\\
 %$ \inference {c \tto c'}{\suma{v}{c} \tto \suma{v}{c'}}$&$\rulename{Sum2}  $\\
-%&\\
-%$ \inference {c \tto c'}{\negacion{c} \tto \negacion{c'}}$&$\rulename{Negation1}  $\\
+&\\
+$ \inference {c \tto c'}{\negacion{c} \tto \negacion{c'}}$&$\rulename{Negation1}  $\\
 &\\
 \hline
 \end{tabular}
